# sanity

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  defines.h  rioki_sanityConfig.cmake.in  sanity.project  sanity.sln  sanity.vcxproj  sanity.vcxproj.filters  sanity.workspace  sanityConfig.cmake.in  trace.cpp  trace.h  vcpkg.json
.github/workflows/: ci.yml  msbuild.yml
include/sanity/: check.h  compose.h  defines.h  exceptions.h  trace.h
sanity/: check.cpp  crash_dump.cpp  pch.cpp  pch.h  sanity.h  sanity.vcxproj  sanity.vcxproj.filters  trace.cpp
sanity-test/: DebugMonitor.cpp  DebugMonitor.h  check_test.cpp  main.cpp  pch.h  sanity-test.vcxproj  sanity-test.vcxproj.filters  trace_test.cpp
src/: check.cpp  exceptions.cpp  trace.cpp
